<resources>
    <string name="app_name">MaterialMusicPlayer</string>
    <string name="app_version_name">0.1beta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="music_library">Music Library</string>
    <string name="song">Songs</string>
    <string name="album">Albums</string>
    <string name="artist">Artists</string>
    <string name="folder">Folders</string>
    <string name="playlist">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="favorite">Favorites</string>
    <string name="tool">Tools</string>
    <string name="exit">Exit</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="app_info_title">APP INFO</string>
    <string name="app_name_label">App Name</string>
    <string name="app_version_label">Version</string>
    <string name="app_license_label">License</string>
    <string name="open_source_license_label">OPEN SOURCE LICENSE</string>
    <string name="theme_title">THEME</string>
    <string name="theme_color_lable">Theme Color</string>
    <string name="ok_label">Ok</string>
    <string name="cancel_label">Cancel</string>

    <string-array name="settings_item">
        <item>Appearance</item>
        <item>About</item>
    </string-array>


    <string name="theme_color_key">theme_color</string>
</resources>
